cleaning up more unused code